# Alexandria

./: BUILDER_WARNING.txt  BUILD_PLAN.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCTRINE.md  LICENSE  MANIFEST.json  MANIFESTO.md  NON_GOALS.md  PHILOSOPHY_LOCK.json  README.md  README_ADDENDUM.md  ROOT_TRUTH_LAYER.md  TRUTH_ENGINE_SPEC.md  pyproject.toml  run.py  tree.txt
alexandria/: __init__.py  cli.py  doctrine.py  domains.py  exceptions.py  hypothesis.py  invariants.py  kernel.py  ledger.py  persistence.py  policies.py  provenance.py  reconciler.py  relations.py  rules.py  schema.py  solver.py
api/: app.py  hashchain.py  routes.py  schemas.py
config/: config.yaml
constitution/: GENERATOR_TRUST_MODEL.md
docs/: ARCHITECTURE.md  DOCTRINE.md  GENERATOR_INTERFACE.md  INVARIANTS.md  LEDGER.md  NON_GOALS.md  PURPOSE.md  REPLAY.md  SPEC.md  TRUST_DOMAINS.md  index.html  openapi.json  replay.html  styles.css  verify.html
examples/: kernel_integration_example.py
generators/: api_adapter.py  interface.py  local_adapter.py  manual_adapter.py  symbolic_adapter.py  tasker_bridge_adapter.py
governance/: MULTI_AGENT_CONSENSUS_ENGINE.md
integration/: SPIRAL_GENERATOR_INTEGRATION_SPEC.md
ontology/: CANONICAL_DOMAIN_ONTOLOGY.md
serialization/: DETERMINISTIC_SERIALIZATION_SPEC.md
tests/: test_kernel.py
